--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     <header>            
 
         <h1>Bienvenido a Generador</h1>        
+        <button id="boton">Haz clic aquí</button>
+
+        <script src="script.js"></script>
 
     </header>
+
+    </div id="contenedor">
+
 </body>
 
 </html>
